# LazyTag

./: .gitignore  MANIFEST.in  README.md  conftest.py  core.py  installer.py  lazytag.py  pyproject.toml  requirements.txt  setup.py  tag_commit_hook.py
legacy/: install_pre_commit_hook.py  tag_commit_hook.py
legacy/test/: test_tag_commit_hook.py
tests/: test_core.py  test_tag_commit_hook.py
