[project]
name = "lazytag"
version = "0.1.0"
description = "CLI tool to append Jira-style tags to modified source code lines"
authors = [
    { name="Sebastian Rodriguez (semarova)", email="sebastian@apostrofo.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["git", "pre-commit", "jira", "tagging", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0"
]

[project.scripts]
lazytag = "lazytag:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"